--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section id="info"><!-- Cover -->
                 <div class="container"><!-- Container -->
                     <div class="row text-center">
-                        <div class="col-xs-12">
+                        <div class="col-xs-12 box">
                            <span>Chicken</span>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos iste consequatur cum eaque fugiat harum, nobis illum magni minus dignissimos eum molestiae inventore soluta, ipsum dolores tempore facilis nesciunt quaerat!</p>
                             
